Fix responsiveness on smaller devices, tablet and laptop

--- a/src/sass/desktop.scss
+++ b/src/sass/desktop.scss
@@ -24,14 +24,15 @@
     margin-top: -2rem;
   }
 
-  .profile {
+  #about .profile {
     display: flex;
     width: 100%;
     justify-content: center;
     align-items: center;
     margin-bottom: 5rem;
+
     &_pic {
-      //   margin-right: 3rem;
+      height: 13rem;
     }
   }
 
@@ -41,7 +42,7 @@
   }
 
   #about .arrow {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     padding: 0 0 2rem 0;
   }
 
